# ArcadeEngine

./: .gitignore  CMakeLists.txt  makefile
Content/: Config.json
Content/Shaders/: Additive.frag  Blur.frag  Downsample.frag  Glitch.frag  Invert.frag  Monitor.frag
Engine/Include/Core/: Engine.h  EngineConfig.h  EngineContext.h  EngineVisitor.h  Overlay.h
Engine/Include/Graphics/: Effect.h
Engine/Include/Graphics/Effects/: EffectBloom.h  EffectGlitch.h  EffectInverted.h  EffectMonitor.h
Engine/Include/Managers/: AudioManager.h  ClipboardManager.h  CursorManager.h  GuiManager.h  InputManager.h  RandomManager.h  RenderManager.h  ResourceManager.h  SaveManager.h  SceneManager.h  ScreenshotManager.h  TimeManager.h
Engine/Include/Scene/: Scene.h  SceneFactory.h  SceneUtils.h
Engine/Include/Utils/: Cooldown.h  InputBindings.h  Log.h  Verify.h
Engine/Source/: Main.cpp
Engine/Source/Core/: Engine.cpp  EngineConfig.cpp  EngineVisitor.cpp  Overlay.cpp
Engine/Source/Graphics/Effects/: EffectBloom.cpp  EffectGlitch.cpp  EffectInverted.cpp  EffectMonitor.cpp
Engine/Source/Managers/: AudioManager.cpp  ClipboardManager.cpp  CursorManager.cpp  GuiManager.cpp  InputManager.cpp  RandomManager.cpp  RenderManager.cpp  ResourceManager.cpp  SaveManager.cpp  SceneManager.cpp  ScreenshotManager.cpp  TimeManager.cpp
Engine/Source/Scene/: SceneFactory.cpp
Engine/Source/Utils/: Cooldown.cpp  InputBindings.cpp
Games/Include/: Bounce.h
Games/Include/Config/: BounceConfig.h
Games/Include/Types/: BounceTypes.h
Games/Source/: Bounce.cpp
